<resources>
    <string name="app_name">Quản lý Task</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <array name="days_in_week">
        <item>Thứ 2</item>
        <item>Thứ 3</item>
        <item>Thứ 4</item>
        <item>Thứ 5</item>
        <item>Thứ 6</item>
        <item>Thứ 7</item>
        <item>Chủ nhật</item>

    </array>
    <string name="title_activity_list_task">ListTaskActivity</string>
    <string name="action_settings">Settings</string>
    <string name="list_task">Danh sách công việc</string>
    <string name="title">Tiêu đề</string>
    <string name="description">Mô tả</string>
    <string name="new_task">Tạo mới công việc</string>
    <string name="accept">ĐỒNG Ý</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="deadline">Ngày hoàn thành</string>
    <string name="edit">Sửa</string>
    <string name="delete">Xóa</string>
    <string name="dialog_confirm_delete">Bạn có muốn xóa công việc này?</string>
    <string name="title_activity_main_task">Công việc phải thực hiện</string>
    <string name="title_activity_new_task">Tạo mới công việc</string>
</resources>
